--- a/src/pages/userpage/userpage.scss
+++ b/src/pages/userpage/userpage.scss
@@ -1,7 +1,52 @@
-.toolbar-title{
-	padding: 10px 0px;
-	background-color: #FFB300;
-	color: #FFFFFF;
-	font-weight: bold;
-	text-align: center;
+page-userpage {
+	.bar-buttons{
+		background-color: #FFB300;
+		color: #FFFFFF;
+	}
+	.page-toolbar .toolbar-background{
+		background-color: #616161;
+	}
+	.user_top{
+		overflow: hidden;
+	}
+	.user_pic{
+		width: 100px;
+		height: 100px;
+		margin: 10px 10px;
+		background-color: black;
+		float:left;
+	}
+	.user_info{
+		width: 150px;
+		color: #FFFFFF;
+		font-size: 14px;
+		float:left;
+		padding-top: 15px;
+		text-align: right;
+		line-height: 25px;
+	}
+	.user_bottom{
+		color: #FFFFFF;
+		padding-left: 5px;
+		text-align: right;
+	}
+	.user_side_list{
+		font-size: 16px;
+		padding-left: 10px;
+		margin-top: 10px;
+		li{
+			padding: 10px 10px;
+		}
+		ion-icon{
+			margin-right: 10px;
+		}
+		.sub-list{
+			padding-left: 60px;
+			font-size: 16px;
+			color: #666666;
+		}
+	}
+	.content-md{
+		background-color: #f3f3f3;
+	}
 }
