--- a/src/pages/textshare/textshare.scss
+++ b/src/pages/textshare/textshare.scss
@@ -1,3 +1,16 @@
 page-textshare {
+	.toolbar-background{
+		background-color: #FFB300;
+		color: #FFFFFF;
+	}
+	.toolbar-title{
+		color: #FFFFFF;
+	}
+	.card-bottom{
+		margin-bottom: 5px;
+		ion-col{
+			text-align: center;
+		}
+	}
 
 }
