--- a/src/pages/mypage/mypage.scss
+++ b/src/pages/mypage/mypage.scss
@@ -1,3 +1,15 @@
 page-mypage {
-
+	.toolbar-background{
+		background-color: #FFB300;
+		color: #FFFFFF;
+	}
+	.toolbar-title{
+		color: #FFFFFF;
+	}
+	.card-bottom{
+		margin-bottom: 5px;
+		ion-col{
+			text-align: center;
+		}
+	}
 }
