--- a/src/pages/userpage/textshare/textshare.scss
+++ b/src/pages/userpage/textshare/textshare.scss
@@ -12,5 +12,12 @@ page-textshare {
 			text-align: center;
 		}
 	}
+	.list-header-md{
+		margin-bottom: 0px;
+		border-bottom: 1px solid #dedede;
+	}
+	.list-toggle-wrapper{
+		overflow: hidden;
+	}
 
 }
