--- a/src/pages/study/study.scss
+++ b/src/pages/study/study.scss
@@ -57,4 +57,13 @@ page-study {
 		color: #FFFFFF;
 		text-align:center;
 	}
+	.padding20{
+		padding: 20px;
+	}
+	.padding10{
+		padding: 10px;
+	}
+	.studyBG{
+		background-color: #AB47BC;
+	}
 }
