--- a/src/pages/study/index/index.scss
+++ b/src/pages/study/index/index.scss
@@ -1,3 +1,83 @@
 page-index {
-
+	.cardLabel{
+		background-color: #AB47BC;
+		color: #FFFFFF;
+	}
+	.scheduleWrap{
+		padding: 0px !important;
+	}
+	.scheduleBox{
+		ion-icon{
+			margin-right: 10px;
+			color: #999999;
+			position: relative;
+			top: -2px;
+			width: 24px;
+			height: 24px;
+			font-size:24px;
+		}
+		.dataLabel{
+			color: #999999;
+			width: 45px;
+			margin-right: 10px;
+		}
+		.StudyIndexMap{
+			height: 200px;
+		}
+	}
+	.notice.card-panel{
+		padding: 0px;
+		ion-list{
+			
+			ion-item{
+				.n-date{
+					width: 70%;
+					color: #999999;
+					font-size: 12px;
+					display: inline-block;
+				}
+				.n-user{
+					width: 27%;
+					color: #999999;
+					font-size: 12px;
+					text-align: right;
+					display: inline-block;
+				}
+				.n-title{
+					padding-top: 5px;
+					padding-bottom: 10px;
+					font-size: 14px;
+				}
+				
+			}
+		}
+	}
+	.freetalk.card-panel{
+		padding: 0px;
+		ion-list{
+			
+			ion-item{
+				.f-date{
+					width: 70%;
+					color: #999999;
+					font-size: 12px;
+					display: inline-block;
+				}
+				.f-user{
+					width: 27%;
+					color: #999999;
+					font-size: 12px;
+					text-align: right;
+					display: inline-block;
+				}
+				.f-title{
+					padding-top: 5px;
+					padding-bottom: 10px;
+					font-size: 14px;
+				}
+				
+			}
+		}
+	}
+	
 }
