--- a/src/pages/study/schedule/schedule.scss
+++ b/src/pages/study/schedule/schedule.scss
@@ -1,3 +1,27 @@
 page-schedule {
-
+	.latest-schedule{
+		ion-card-header{
+			color: #FFFFFF;
+		}
+		ion-icon{
+			color: #999999;
+		}
+		ion-item{
+			span{
+				display: inline-block;
+				width: 40px;
+				margin-right: 20px;
+				color: #999999;
+				font-size:14px;
+			}
+		}
+	}
+	.StudySchedule{
+		height: 200px;
+	}
+	.tableWrapper{
+		ion-card-header{
+			color: #FFFFFF;
+		}
+	}
 }
